# minesweeper-qt

./: .gitignore  CMakeLists.txt  MineSweeper_zh_CN.ts  field.cpp  field.h  field.ui  fix_gradle.py  grid.cpp  grid.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ms.qrc  static.h  ui-convert.py
android/: AndroidManifest.xml  AndroidManifest.xml.in
include/: LanguageChoiceAction.h  Localeable.h  database.h  field.h  grid.h  haptic.h  mainwindow.h  mainwindow.ui  record.h  record.ui  recordview.h  static.h  toast.h
res/: MineSweeper_en.ts  MineSweeper_zh_CN.ts
res/i18n/: MineSweeper_en.ts  MineSweeper_zh_CN.ts
src/: LanguageChoiceAction.cpp  Localeable.cpp  base_interface.h  database.cpp  field.cpp  field.h  field.ui  grid.cpp  grid.h  haptic.cpp  icon_tests.cpp  locale.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recordview.cpp  render_utils.cpp  toast.cpp
